Restore support for Java 8 (#767)
* Restore support for Java 8

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Address code review comments (update compatibility)

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

---------

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>
(cherry picked from commit ff5e0a2d5f04acb4c11c3217b6e8fc71161a2a4b)